# RNADNADecoder

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
schema/: schema.json
scripts/: clang-format.cmake
src/: Application.cpp  Application.hpp  Entrypoint.cpp  main.cpp  wheel.json
src/api/: HttpParser.cpp  HttpParser.hpp  HttpServer.cpp  HttpUtils.cpp  HttpUtils.hpp  TcpConnection.cpp
src/api/include/: HttpParser.hpp  HttpServer.hpp  HttpTypes.hpp  HttpUtils.hpp  TcpConnection.hpp
src/engine/: CompoundBase.cpp  CompoundBase.hpp  DecoderEngine.cpp  DecoderEngine.hpp  EngineTypes.cpp  EngineTypes.hpp  Wheel.cpp  Wheel.hpp  WheelTypes.cpp  WheelTypes.hpp
tests/: CMakeLists.txt  trim.cpp
